# summary-malapa-2026

./: .gitignore  CLAUDE.md  README.md  main.py  malapa_helpers.py  pyproject.toml  step_1_prepare_data.ipynb  step_2_explore_contributions.ipynb
source_data/: README.md  contributions.json  institution_locations.json  manual_to_standard_institutions_dictionary.json  poster_submission_numbers.json
step_1_output/: contributions_rewritten.json  institutions_seen.json
step_2_output/: README.md  institution_submissions_by_community.txt
