[project]
name = "summary-malapa-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"ipykernel>=6.29.0",
	"jupyterlab>=4.6.1",
	"kaleido==0.2.1",
	"matplotlib>=3.10.9",
	"nbformat>=5.10.4",
	"networkx>=3.6.1",
	"numpy>=2.4.6",
	"pandas>=3.0.3",
	"plotly>=6.8.0",
	"pycountry>=26.2.16",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
]
